my first version of module2-solution

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,131 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta charset="utf-8">
+	<title>Our Menu</title>
+	<style >
+		
+*{
+	box-sizing: border-box;
+	/*margin:0;*/
+	border:0;
+
+}
+div#bigbox {
+	background-color: #a9a9a9;
+	width:33.1%;
+	height: 200px;
+	float:left;
+	border: 1px solid black;
+	margin-right: 1px;
+	
+
+
+}
+p{
+/*background-color: #008B8B;*/
+width: 100px;
+height:20px;
+margin:0;
+float:right;
+clear: left;
+border: 1px solid black;
+text-align: center;
+
+}
+p.small{
+	background-color: #dc143c;
+	
+	
+}
+p.big{
+	background-color: #008B8B;
+	
+}
+p.large{
+	background-color: #6495ed;
+    
+}
+h1{
+	text-align: center;
+}
+
+section {
+	clear: right;
+	}
+
+
+
+ /************large Devices********************/
+ @media (min-width: 1200px) {
+	.col-lg-1,.col-lg-2,.col-lg-3{
+		float: left;
+		border: 1px solid black;
+	}
+	.col-lg-1{
+		width: 33.3%
+	}
+	.col-lg-2{
+		width: 33.3%
+	}
+	.col-lg-3{
+		width: 33.3%
+	}
+	}
+ 	
+ }
+
+
+ /************ Medium Devices*****************
+
+
+ /************* Small Devices********************/
+
+	</style>
 </head>
 <body>
+<h1> Our Menu</h1>
 
+<div id="bigbox"> 
+<!-- <div id="box"> -->
+<p class="small">Chicken </p>
+<section> Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
+ </div>
+ </div>
+
+<div id="bigbox"> 
+<!-- <div id="box"> -->
+<p class="big">Beef</p>
+<section>Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
+ <!-- </div> -->
+ </div>
+ 
+ <div id="bigbox"> 
+<!-- <div id="box"> -->
+<p class="large">Soushi</p>
+<section>Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
+ <!-- </div> -->
+ </div>
+
+<!-- <p id="p1">Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+ </p1>
+
+<p id="p2">Lorem2 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p2>
+
+<p id="p3">Lorem3 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p3>
+<!-- <p1>Chicken </p1>
+<P2>Beef</P2>
+<p3> Soushi</p3> -->	
+
+ 
 </body>
 </html>
