full version of module2-solution

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,130 +2,184 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Our Menu</title>
-	<style >
-		
-*{
-	box-sizing: border-box;
-	/*margin:0;*/
-	border:0;
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Module2-exercise</title>
+<style>
 
-}
-div#bigbox {
-	background-color: #a9a9a9;
-	width:33.1%;
-	height: 200px;
-	float:left;
-	border: 1px solid black;
-	margin-right: 1px;
-	
-
-
-}
-p{
-/*background-color: #008B8B;*/
-width: 100px;
-height:20px;
-margin:0;
-float:right;
-clear: left;
-border: 1px solid black;
-text-align: center;
-
-}
-p.small{
-	background-color: #dc143c;
-	
-	
-}
-p.big{
-	background-color: #008B8B;
-	
-}
-p.large{
-	background-color: #6495ed;
-    
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
 }
 h1{
-	text-align: center;
+  text-align: center;
+  margin-bottom: 15px;
+ 
 }
 
-section {
-	clear: right;
-	}
+p {
+  /*border: 1px solid black;*/
+  /*background-color: #BDB76B;*/
+  width: 100%;
+  height: 150px;
+  padding-left: 10px;
+  font-family: Helvetica;
+  color: white;
+  clear: both;
+}
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+ 
+}
+ .section{
+  background-color:#A9A9A9;
+  margin-left: 20px;
+ position: relative;
+ margin-right: 20px;
+ margin-bottom: 30px;
+ border: 1px solid black;
+
+}
+
+div >h2{
+  width: 250px;
+  height: 50px; 
+ float: right;
+ margin-top: 0;
+ text-align: center;
+ border: 1px solid black;
+
+}
+
+h2.Chicken{
+background-color: #90EE90;
+}
+h2.Beef{
+background-color:#DC143C;
+}
+h2.Soushi{
+background-color: #8B0000;
+}
 
 
+/********** Large devices only **********/
+@media (min-width: 992px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    /*border: 1px solid green;*/
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
 
- /************large Devices********************/
- @media (min-width: 1200px) {
-	.col-lg-1,.col-lg-2,.col-lg-3{
-		float: left;
-		border: 1px solid black;
-	}
-	.col-lg-1{
-		width: 33.3%
-	}
-	.col-lg-2{
-		width: 33.3%
-	}
-	.col-lg-3{
-		width: 33.3%
-	}
-	}
- 	
- }
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11,.col-md-12 {
+    float: left;
+      
+    /*border: 1px solid green;*/
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
 
-
- /************ Medium Devices*****************
-
-
- /************* Small Devices********************/
-
-	</style>
+</style>
 </head>
 <body>
-<h1> Our Menu</h1>
+<h1>Menu</h1>
 
-<div id="bigbox"> 
-<!-- <div id="box"> -->
-<p class="small">Chicken </p>
-<section> Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
- </div>
- </div>
-
-<div id="bigbox"> 
-<!-- <div id="box"> -->
-<p class="big">Beef</p>
-<section>Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
- <!-- </div> -->
- </div>
+<div class="row">
+ <div class=" col-lg-4 col-md-6">
+  <div class="section">
+    <h2 class="Chicken">Chicken</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quos explicabo, vel non minima est dolorum quis culpa, dolor praesentium! ipsum dolor sit amet, consectetur adipisicing elit. Culpa dolor eius quam, optio temporibus doloremque reprehenderit dolore. Qui rem, accusamus.</p>
+  </div>
+</div>
+<div class="col-lg-4 col-md-6">
+  <div class="section">
+    <h2 class="Beef">Beef</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quia veritatis dicta eos, animi aut doloremque laboriosam tempora expedita at. ipsum dolor sit amet, consectetur adipisicing elit. Quis nostrum excepturi voluptatum similique, obcaecati aliquam corporis dicta ad doloremque cupiditate?</p>
+  </div>
+</div>
+<div class="col-lg-4 col-md-12">
+  <div class="section">
+    <h2 class="Soushi">Soushi</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa ex enim qui, reiciendis voluptatem nisi. Magnam velit quis maiores expedita. ipsum dolor sit amet, consectetur adipisicing elit. Autem repellendus eum aliquam culpa error saepe quisquam officiis quidem atque eveniet.</p>
+  </div>
+</div>
  
- <div id="bigbox"> 
-<!-- <div id="box"> -->
-<p class="large">Soushi</p>
-<section>Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </section>
- <!-- </div> -->
- </div>
 
-<!-- <p id="p1">Lorem1 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- </p1>
 
-<p id="p2">Lorem2 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p2>
+</div>
 
-<p id="p3">Lorem3 ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p3>
-<!-- <p1>Chicken </p1>
-<P2>Beef</P2>
-<p3> Soushi</p3> -->	
-
- 
 </body>
 </html>
