--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -154,7 +154,7 @@ background-color: #8B0000;
 </style>
 </head>
 <body>
-<h1>Menu</h1>
+<h1> Our Menu</h1>
 
 <div class="row">
  <div class=" col-lg-4 col-md-6">
