--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -14,7 +14,7 @@
 
 
   <nav id="header-nav" class="navbar navbar-default navbar" >
-  <a href="" class="navbar-brand">Food,LLC</a>
+  <a href="" class="navbar-brand"><h1>Food,LLC</h1></a>
 
   <div class="container">
   <div class="navbar-header">
@@ -28,9 +28,9 @@
    </div>
      <div  class="collapse navbar-collapse" id="collapsable-nav">
       <ul id="nav-list" class="nav navbar-nav">
-        <li class=" hidden-lg hidden-md"><a  href="chicken">Chicken</a></li>
-        <li class=" hidden-lg hidden-md"><a href="beef">Beef</a></li>
-        <li class=" hidden-lg hidden-md"><a href="soushi">Soushi</a></li> 
+        <li class="hidden-lg hidden-md hidden-sm"><a  href="chicken">Chicken</a></li>
+        <li class=" hidden-lg hidden-md hidden-sm"><a href="beef">Beef</a></li>
+        <li class="hidden-lg hidden-md hidden-sm"><a href="soushi">Soushi</a></li> 
 
       </div>  
    </div>
@@ -42,7 +42,7 @@
 </div>
 <div class="container">
 <div class="row">
- <div class=" col-lg-12 col-md-12 col-sm-12">
+ <div class="col-md-12 col-sm-12 col-xs-12">
   <div class="section">
 
     <h2 class="Chicken">Chicken</h2>
