--- a/module3-solution/module3-extrapractice.html
+++ b/module3-solution/module3-extrapractice.html
@@ -18,7 +18,7 @@
 
 
   <nav id="header-nav" class="navbar navbar-default navbar" >
-  <a href="" class="navbar-brand">Food,LLC</a>
+  <a href="" class="navbar-brand"><h1>Food,LLC</h1></a>
 
   <div class="container">
   <div class="navbar-header">
